...
        children: [
          Column(
            children: [
              Padding(
                padding: const EdgeInsets.all(20.0),
                child: HomeSearchRow(
                  key: Key("home_search_row"),
                  controller: _searchController,
                  onSearchChanged: _searchFriends,
                  onAddFriend: () {
                    setState(() {
                      _loadFriends();
                    });
...
